using keycloak admin client, and logic to register default and custom admins